infrastructure/istio-gateway/overlays/lab-clusters/cyso-pdv/fieldlab-egress-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fieldlab-egress-gateway
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
  listeners:
  - name: tls-havenplus-commonground-nl
    hostname: havenplus.commonground.nl
    port: 443
    protocol: TLS
    allowedRoutes:
      namespaces:
        from: All
